--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
 <body>
   <div class="app">
     <div class="todo-list">
-      <h1 class="title">
-        Ceep
-      </h1>
+      <h1 class="title">Ceep</h1>
   
       <form class="form" action="">
-        <input class="form-input" data-form-input type="text">
+        <input class="form-input" type="text" data-form-input >
+        <input type="datetime-local" placeholder="Fill as YYYY-MM-DD" data-form-date >
         <button class="form-button" data-form-button> Novo Item </button>
       </form>
 
       <ul class="list" data-taskList>
 
       </ul>
+
     </div>
-    <script src="./app.js" type="module"></script>
+    
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+  <script src="./app.js" type="module"></script>
 </body>
 </html>
